--- a/_layouts/country.html
+++ b/_layouts/country.html
@@ -42,7 +42,7 @@ layout: default
     </div>
   </article> <!-- End Main Article -->
 
-  {% include author.html %}
+  {% unless page.author == false %}{% include author.html %}{% endunless %}
 </main> <!-- End Section Post Content -->
 
 {% include footer.html %}
