--- a/_layouts/country.html
+++ b/_layouts/country.html
@@ -16,7 +16,7 @@ layout: default
     </header> <!-- End Header -->
 
     <div class="entry_content">
-      {{page.content | markdownify}}
+      {{ content }}
 
       <section class="chapters cf">
           <div class="wrapper flex-row">
