add posts to bedrijven page

--- a/_layouts/country.html
+++ b/_layouts/country.html
@@ -18,6 +18,7 @@ layout: default
     <div class="entry_content">
       {{ content }}
 
+      {% if page.country %}
       <section class="chapters cf">
           <div class="wrapper flex-row">
               {% for post in site.categories[page.country] %}
@@ -38,7 +39,7 @@ layout: default
               {% endfor %}
           </div>
       </section>
-
+      {% endif %}
     </div>
   </article> <!-- End Main Article -->
 
