--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4065,6 +4065,8 @@ cite {
 
 .chapters .chapter img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
   vertical-align: middle;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
