--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -10,7 +10,7 @@ layout: default
         <img src={{ "/assets/img/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
       </div>
       <div class="post_description">
-        <p class="post_meta">{{page.country}}</p>
+	    <a href="{{site.baseurl}}/countries/{{page.categories}}"><p class="post_meta">{{page.country}}</p></a>
         <h1 class="post_title">{{page.title}}</h1>
       </div>
     </header> <!-- End Header -->
