--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -30,13 +30,13 @@
           <img src="{{ site.baseurl }}/assets/img/banner/banner1.jpg" alt="maple leaf"/>
         </div>
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/AustraliaSydneySkyline_scaled2.jpg" alt="Sydney skyline"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/sydney-skyline.jpg" alt="Sydney skyline"/>
         </div>
         <div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/CanadaNaturebanner_scaled.jpg" alt="Chicago"/>
         </div>
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/CanadaTorontoSkyline3_scaled.jpg" alt="Toronto skyline"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/toronto-skyline.jpg" alt="Toronto skyline"/>
         </div>
         <div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/NZMilfordSound3.jpg" alt="Milford Sound"/>
@@ -52,14 +52,14 @@
         </div>
       </div>
 
-      <!-- Left and right controls
+      <!-- Left and right controls -->
       <a class="carousel-control-prev" href="#banner" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon"></span>
       </a>
       <a class="carousel-control-next" href="#banner" role="button" data-slide="next">
         <span class="carousel-control-next-icon"></span>
       </a>
-      -->
+      <!-- -->
 
 
 </section> <!-- End Section Banner -->
