--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4010,11 +4010,14 @@ cite {
 }
 
 #banner .carousel-item {
-  max-height: 65vh;
+  height: 65vh;
 }
 
 #banner .carousel-item img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  vertical-align: middle;
 }
 
 #banner .content {
