--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -32,9 +32,9 @@
         <div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/sydney-skyline.jpg" alt="Sydney skyline"/>
         </div>
-        <div class="carousel-item">
+        <!--<div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/CanadaNaturebanner_scaled.jpg" alt="Chicago"/>
-        </div>
+        </div>-->
         <div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/toronto-skyline.jpg" alt="Toronto skyline"/>
         </div>
@@ -45,11 +45,11 @@
           <img src="{{ site.baseurl }}/assets/img/banner/USGoldenGateBridge.jpg" alt="Golden Gate Bridge"/>
         </div>
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/ChinaShanghaiBanner2.jpg" alt="Shanghai"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/shanghai-skyline.jpg" alt="Shanghai"/>
         </div>
-        <div class="carousel-item">
+        <!--<div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/AustraliaNaturebanner.jpg" alt="Australian Nature"/>
-        </div>
+        </div>-->
       </div>
 
       <!-- Left and right controls -->
