--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -36,7 +36,10 @@
           <img src="{{ site.baseurl }}/assets/img/banner/CanadaNaturebanner_scaled.jpg" alt="Chicago"/>
         </div>-->
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/toronto-skyline.jpg" alt="Toronto skyline"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/niagara-falls.jpg" alt="Niagara Falls"/>
+        </div>
+        <div class="carousel-item">
+          <img src="{{ site.baseurl }}/assets/img/banner/toronto-skyline2.jpg" alt="Toronto skyline"/>
         </div>
         <div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/NZMilfordSound.jpg" alt="Milford Sound"/>
@@ -45,7 +48,7 @@
           <img src="{{ site.baseurl }}/assets/img/banner/USGoldenGateBridge.jpg" alt="Golden Gate Bridge"/>
         </div>
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/shanghai-skyline.jpg" alt="Shanghai"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/shanghai-skyline-night.jpg" alt="Shanghai"/>
         </div>
         <!--<div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/AustraliaNaturebanner.jpg" alt="Australian Nature"/>
