add banner images

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -48,11 +48,14 @@
           <img src="{{ site.baseurl }}/assets/img/banner/USGoldenGateBridge.jpg" alt="Golden Gate Bridge"/>
         </div>
         <div class="carousel-item">
+          <img src="{{ site.baseurl }}/assets/img/banner/grand-canyon.jpg" alt="Grand Canyon"/>
+        </div>
+        <div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/shanghai-skyline-night.jpg" alt="Shanghai"/>
         </div>
-        <!--<div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/AustraliaNaturebanner.jpg" alt="Australian Nature"/>
-        </div>-->
+        <div class="carousel-item">
+          <img src="{{ site.baseurl }}/assets/img/banner/lake-mcdonald.jpg" alt="Lake McDonald"/>
+        </div>
       </div>
 
       <!-- Left and right controls -->
