saskia is gek ohja en verder heelveel geschreven over de vs

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -11,8 +11,11 @@ layout: default
       <section class="intro cf">
         <h3 class="slogan"><a class="logo">EAH</a> - persoonlijke begeleiding tegen de laagste prijs</h3>
         EAH zorgt al meer dan 20 jaar voor verantwoorde begeleiding van mensen die een visum nodig hebben om te werken, studeren of permanent te wonen in Australië, Canada, Nieuw-Zeeland, de Verenigde Staten, China, Japan en Taiwan. Voor zowel particulieren als bedrijven. Heeft u interesse in een ander land? Wij helpen u op weg en bieden op-maat advies.
+
+        <p><h5>EAH biedt de volgende diensten:</h5></p>
       </section>
     </div>
+
 
     <section class="chapters cf">
       <div class="wrapper flex-row">
