--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -36,10 +36,10 @@
           <img src="{{ site.baseurl }}/assets/img/banner/CanadaNaturebanner_scaled.jpg" alt="Chicago"/>
         </div>-->
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/niagara-falls.jpg" alt="Niagara Falls"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/CanadaLakebanner.jpg" alt="Niagara Falls"/>
         </div>
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/toronto-skyline2.jpg" alt="Toronto skyline"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/toronto-skyline3.jpg" alt="Toronto skyline"/>
         </div>
         <div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/NZMilfordSound.jpg" alt="Milford Sound"/>
@@ -48,10 +48,13 @@
           <img src="{{ site.baseurl }}/assets/img/banner/USGoldenGateBridge.jpg" alt="Golden Gate Bridge"/>
         </div>
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/grand-canyon.jpg" alt="Grand Canyon"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/niagara-falls.jpg" alt="Grand Canyon"/>
         </div>
         <div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/shanghai-skyline-night.jpg" alt="Shanghai"/>
+        </div>
+        <div class="carousel-item">
+          <img src="{{ site.baseurl }}/assets/img/banner/grand-canyon.jpg" alt="Grand Canyon"/>
         </div>
         <div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/lake-mcdonald.jpg" alt="Lake McDonald"/>
