move content out of layout file

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4381,6 +4381,7 @@ div.service {
   font-size: 1.5rem;
   color: #525c65;
   background-color: white;
+  margin-bottom: 3rem;
 }
 
 .intro .entry_content{
