--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,28 +1,9 @@
-
-<!--<section id="banner" data-vide-bg="{{site.baseurl}}/assets/video/{% if site.video %}{{ site.video }}{% endif %}" data-vide-options="posterType: jpg, loop: true, muted: false, position: 50% 50%">-->
-<!--<section id="banner">-->
-
-    <!-- carousel -->
+    <!-- Section Banner; Carousel -->
     <section id="banner" class="carousel slide carousel-fade" data-ride="carousel">
-
-      <!--</div>-->
       <div class="content">
         <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}Emigratie Adviesbureau Hiltemann
         <br/><span class="sub_title">Thuis in het buitenland</span>{% endif %}</h1>
       </div>
-
-      <!-- Indicators
-      <ul class="carousel-indicators">
-        <li data-target="#banner" data-slide-to="0" class="active"></li>
-        <li data-target="#banner" data-slide-to="1"></li>
-        <li data-target="#banner" data-slide-to="2"></li>
-        <li data-target="#banner" data-slide-to="3"></li>
-        <li data-target="#banner" data-slide-to="4"></li>
-        <li data-target="#banner" data-slide-to="5"></li>
-        <li data-target="#banner" data-slide-to="6"></li>
-        <li data-target="#banner" data-slide-to="7"></li>
-      </ul>
-      -->
 
       <!-- The slideshow -->
       <div class="carousel-inner">
@@ -69,6 +50,4 @@
         <span class="carousel-control-next-icon"></span>
       </a>
       <!-- -->
-
-
-</section> <!-- End Section Banner -->
+    </section> <!-- End Section Banner -->
