--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-
-<footer class="main_footer">
-  <div class="wrapper">
-    <div class="copyright">
-      <p>&copy; {{site.time | date: '%Y'}} All rights reserved. Design by <a href="https://shiltemann.github.io" target="_blank"> Ysjes Webdesign </a></p>
+  <!-- Section Footer -->
+  <footer class="main_footer">
+    <div class="wrapper">
+      <div class="copyright">
+        <p>&copy; {{site.time | date: '%Y'}} All rights reserved. Design by <a href="https://shiltemann.github.io" target="_blank"> Ysjes Webdesign </a></p>
+      </div>
     </div>
-  </div>
-</footer> <!-- End Section Footer -->
+  </footer> <!-- End Section Footer -->
