--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,8 @@
        <div class="mydropdown-content" >
          <a href="{{site.baseurl}}/countries/australie/">Australie</a><br/>
          <a href="{{site.baseurl}}/countries/canada/">Canada</a><br/>
-         <a href="{{site.baseurl}}/countries/new-zealand/">Nieuw-Zeeland</a><br/>
-         <a href="{{site.baseurl}}/countries/united-states/">Verenigde Staten</a><br/>
+         <a href="{{site.baseurl}}/countries/nieuw-zeeland/">Nieuw-Zeeland</a><br/>
+         <a href="{{site.baseurl}}/countries/verenigde-staten/">Verenigde Staten</a><br/>
          <a href="{{site.baseurl}}/countries/china-japan-taiwan/">China, Japan en Taiwan</a><br/>
          <a href="{{site.baseurl}}/countries/overige-landen/">Overige Bestemmingen</a><br/>
        </div>
