rework main page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
   <header class="main_header">
-    <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}E<span>AH</span>{% endif %}</a>
+    <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}E<span>AH</span>{% endif %} <span id="subslogan">Thuis in het buitenland</span></a>
     <nav class="main_menu">
       <div class="mydropdown-menu">
        <span> Kies uw land </span>
