--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
          <a href="{{site.baseurl}}/countries/canada/">Canada</a><br/>
          <a href="{{site.baseurl}}/countries/nieuw-zeeland/">Nieuw-Zeeland</a><br/>
          <a href="{{site.baseurl}}/countries/verenigde-staten/">Verenigde Staten</a><br/>
-         <a href="{{site.baseurl}}/countries/china-japan-taiwan/">China, Japan en Taiwan</a><br/>
+         <a href="{{site.baseurl}}/countries/china-taiwan/">China en Taiwan</a><br/>
          <a href="{{site.baseurl}}/countries/overige-landen/">Overige Bestemmingen</a><br/>
        </div>
       </div>
