--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -9,39 +9,39 @@
       <!-- The slideshow -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="{{ site.baseurl }}/assets/img/banner/CanadaLakebanner.jpg" alt="maple leaf"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/banner1.jpg" alt="Maple Leaf"/>
         </div>
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/sydney-skyline.jpg" alt="Sydney skyline"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/CanadaLakebanner.jpg" alt="Canada Lake"/>
+        </div>
+        <div class="carousel-item">
+          <img src="{{ site.baseurl }}/assets/img/banner/sydney-skyline.jpg" alt="Sydney Skyline"/>
         </div>
         <!--<div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/CanadaNaturebanner_scaled.jpg" alt="Chicago"/>
         </div>-->
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/NZMilfordSound.jpg" alt="Niagara Falls"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/NZMilfordSound.jpg" alt="Milford Sound"/>
         </div>
         <div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/toronto-skyline3.jpg" alt="Toronto skyline"/>
         </div>
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/niagara-falls.jpg" alt="Milford Sound"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/niagara-falls.jpg" alt="Niagara Falls"/>
         </div>
         <div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/USGoldenGateBridge.jpg" alt="Golden Gate Bridge"/>
         </div>
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/grand-canyo.jpg" alt="Grand Canyon"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/grand-canyon.jpg" alt="Grand Canyon"/>
         </div>
         <div class="carousel-item">
           <img src="{{ site.baseurl }}/assets/img/banner/shanghai-skyline-night.jpg" alt="Shanghai"/>
         </div>
         <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/lake-mcdonald.jpg" alt="Grand Canyon"/>
+          <img src="{{ site.baseurl }}/assets/img/banner/lake-mcdonald.jpg" alt="Lake McDonald"/>
         </div>
-        <div class="carousel-item">
-          <img src="{{ site.baseurl }}/assets/img/banner/banner1.jpg" alt="Lake McDonald"/>
-        </div>
-      </div>
+
 
       <!-- Left and right controls -->
       <a class="carousel-control-prev" href="#banner" role="button" data-slide="prev">
