--- a/_layouts/country.html
+++ b/_layouts/country.html
@@ -33,8 +33,11 @@ layout: default
             </div>
             {% endfor %}
           </div>
-        </section>
+          </section>
         {% endif %}
+      </div>
+      <div class="backlinks">
+        <a href="{{ site.baseurl }}/">Terug naar hoofdpagina</a>
       </div>
     </article> <!-- End Main Article -->
     {% unless page.author == false %}{% include author.html %}{% endunless %}
