add icons to backlinks

--- a/_layouts/country.html
+++ b/_layouts/country.html
@@ -37,7 +37,7 @@ layout: default
         {% endif %}
       </div>
       <div class="backlinks">
-        <a href="{{ site.baseurl }}/">Terug naar hoofdpagina</a>
+        <a href="{{ site.baseurl }}/"><i class="fa fa-home" ></i>Terug naar Hoofdpagina</a>
       </div>
     </article> <!-- End Main Article -->
     {% unless page.author == false %}{% include author.html %}{% endunless %}
