--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,7 @@
   <link href='https://fonts.googleapis.com/css?family=Charm|Bree+Serif|Kaushan+Script' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ "/assets/fonts/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
   <!-- Styles -->
+  <script src="https://kit.fontawesome.com/9f62164c5b.js"></script>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
