--- a/_layouts/service.html
+++ b/_layouts/service.html
@@ -28,7 +28,7 @@ layout: default
       {% else %}
          {% assign icon = "fas fa-level-up-alt" %}
       {% endif %}
-      <a href="{{ site.baseurl }}/"><i class="fa fa-home"></i> Terug naar hoofdpagina</a>-<a href="{{ site.baseurl }}/countries/{{ page.categories }}"><i class="{{ icon }}"></i> Terug naar {{ page.country }} pagina</a>
+      <a href="{{ site.baseurl }}/"><i class="fa fa-home"></i> Terug naar Hoofdpagina</a>-<a href="{{ site.baseurl }}/countries/{{ page.categories }}"><i class="{{ icon }}"></i> Terug naar {{ page.country }} pagina</a>
     </div>
   </article> <!-- End Section Post -->
 
