--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="{{title}}" />
   <meta property="og:description" content="{{description}}" />
-  <meta property="og:url" content="{{page.url}}" />
+  <meta property="og:url" content="{{site.baseurl}}{{page.url}}" />
   <meta property="og:site_name" content="EAH" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:description" content="{{description}}" />
