--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,7 +29,7 @@
   <meta property="og:title" content="{{title}}" />
   <meta property="og:description" content="{{description}}" />
   <meta property="og:url" content="{{site.baseurl}}{{page.url}}" />
-  <meta property="og:site_name" content="EAH" />
+  <meta property="og:site_name" content="Emigratie Adviesbureau Hiltemann" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:description" content="{{description}}" />
   <meta name="twitter:title" content="{{title}}" />
