add partner page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
        </div>
       </div>
       <a href="{{site.baseurl}}/bedrijven/">Bedrijven</a>
+      <a href="{{site.baseurl}}/partners/">Partners</a>
       <a href="{{site.baseurl}}/contact/">Contact</a>
     </nav>
   </header> <!-- End Section Header -->
